# video-driver

./: Android.mk  BUILD.bazel  Kbuild  README.md  target.bzl  target_variants.bzl  video_driver_build.bzl  video_kernel_board.mk  video_kernel_headers.py  video_modules.bzl
.github/actions/aws_s3_helper/: action.yml
.github/actions/aws_s3_helper /: action.yml
.github/actions/build_docker_image/: action.yml
.github/actions/clone_sources/: action.yml
.github/actions/generate_iris_test_app/: action.yml
.github/actions/inject/: acition.yml  action.yml
.github/actions/lava_job_render/: action.yml
.github/actions/loading/: action.yml
.github/actions/pull_docker_image/: action.yml
.github/actions/sync/: action.yml
.github/ci/: check-uapi-and-driver.sh
.github/workflows/: action.yml  build.yml  commit-check.yml  iris.yml  iris_push.yml  iris_test_runner.yml  iris_v4l2_test.yml  lava-trigger.yml  loading.yml  per_merge.yml  post_merge.yml  pre_merge.yml  qcom-preflight-checks.yml  retrive_images.yml  stale-issues.yaml  sync-and-build.yml  test.yml  trigger-pkg-promote.yml  uapi-check.yml  v412.yaml
ci/: MACHINES.json  inject_iris_app.sh  patch_screv.sh  patch_srcrev.sh
config/: canoe_video.h  chora_video.conf  chora_video.h  hamoa_video.conf  hamoa_video.h  niobe_video.h  qli_video.conf  qli_video.h  x1e80100_video.conf  x1e80100_video.h
driver/vidc/inc/: firmware.h  fixedpoint.h  hfi_command.h  hfi_property.h  msm_media_info.h  msm_vidc.h  msm_vidc_buffer.h  msm_vidc_control.h  msm_vidc_core.h  msm_vidc_debug.h  msm_vidc_driver.h  msm_vidc_events.h  msm_vidc_fence.h  msm_vidc_hw_virt.h  msm_vidc_inst.h  msm_vidc_internal.h  msm_vidc_memory.h  msm_vidc_memory_ext.h  msm_vidc_power.h  msm_vidc_state.h  msm_vidc_synx.h  msm_vidc_v4l2.h  msm_vidc_vb2.h  resources.h  resources_ext.h  venus_hfi.h  venus_hfi_queue.h  venus_hfi_response.h
driver/vidc/src/: firmware.c  hfi_packet.c  msm_vdec.c  msm_venc.c  msm_vidc.c  msm_vidc_buffer.c  msm_vidc_control.c  msm_vidc_debug.c  msm_vidc_driver.c  msm_vidc_fence.c  msm_vidc_memory.c  msm_vidc_memory_ext.c  msm_vidc_power.c  msm_vidc_probe.c  msm_vidc_state.c  msm_vidc_synx.c  msm_vidc_v4l2.c  msm_vidc_vb2.c  resources.c  resources_ext.c  venus_hfi.c  venus_hfi_queue.c  venus_hfi_response.c
msm_video/: Kbuild
pkg-iris-vpu/: README.md  build-package.sh  cleanup.sh  dkms.conf
pkg-iris-vpu/debian/: changelog  control  copyright  iris-vpu-dkms.install.in  iris-vpu-dkms.service  iris-vpu-load.sh  postinst  postrm  prerm  rules
pkg-iris-vpu/debian/modprobe.d/: iris-vpu-dkms.conf
pkg-iris-vpu/scripts/: cross-compile.sh  detect-platform.sh  dkms-build-wrapper.sh
pkg-video-driver/: README.md  build-package.sh  cleanup.sh  dkms.conf
pkg-video-driver/debian/: changelog  control  copyright  postinst  postrm  prerm  rules  video-driver-dkms.install
pkg-video-driver/scripts/: build-wrapper.sh  dkms-build-wrapper.sh  set-build-env.sh
platform/common/inc/: msm_vidc_platform.h
platform/common/src/: msm_vidc_platform.c  msm_vidc_platform_ext.c
platform/qcm6490/src/: msm_vidc_qcm6490.c
platform/qcs8300/src/: msm_vidc_qcs8300.c
platform/sa8775p/src/: msm_vidc_sa8775p.c
sources/: krb5-1.21.3.tar.gz.done
variant/iris2/inc/: hfi_buffer_iris2.h
variant/iris2/src/: msm_vidc_iris2.c
variant/iris3/src/: msm_vidc_iris3.c
vidc/inc/: msm_vidc.h  msm_vidc_core.h  msm_vidc_driver.h  msm_vidc_internal.h  msm_vidc_v4l2.h  msm_vidc_vb2.h  resources.h
vidc/src/: firmware.c  msm_vdec.c  msm_venc.c  msm_vidc.c  msm_vidc_buffer.c  msm_vidc_debug.c  msm_vidc_driver.c  msm_vidc_memory_ext.c  msm_vidc_probe.c  msm_vidc_v4l2.c  msm_vidc_vb2.c  resources.c  venus_hfi.c  venus_hfi_response.c
video/: Kbuild
(+107 files in other folders)
